test/functions/deitz/test_visible1.good
test_visible1.chpl:14: error: unresolved call 'bar(borrowed C)'
test_visible1.chpl:14: note: because no functions named bar found in scope
